# heart-cv

./: .gitignore  README.md  pyproject.toml  run_all.sh
pipeline/: 1_train_yolo.py  2_val_yolo.py  3_prepare_perspectives.py  4_train_perspective.py  5_val_perspective.py  6_test_yolo.py  7_test_perspective.py  8_post_processing.py  post_process.py  prepare.py  run_fold.py
src/heart_cv/: config.py  submission.py  test.py  train.py  val.py
src/heart_cv/dataset/: __init__.py  crop.py  image_processing.py  load_label.py  perspective.py  split.py  yolo.py
src/heart_cv/metric/: __init__.py  iou.py  recall.py
src/heart_cv/postprocessing/: __init__.py  bbox_3d.py  bbox_sectioner.py  greedy_merge.py  nms.py  patient_tube_processing.py  prior_inject.py  projections.py  propergate_box.py  tube.py  tube_sectioner.py  utils.py  wbf.py
src/heart_cv/utils/: __init__.py  submission.py
src/heart_cv/utils/metric/: __init__.py  map.py
src/heart_cv/visualize/: __init__.py  draw_chart.py  draw_slice.py  interactive.py  metric_text.py  pred.py  tube.py  utils.py
