[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heart-cv"
version = "0.1.1"
description = "Object detection project for heart valve images"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "opencv-python",
    "tqdm",
    "torch",
    "numba",
    "ultralytics",   # YOLO (v8/v11)
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]