[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "heart-cv"
dynamic = ["version"]
description = "Object detection project for heart valve images"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "opencv-python",
    "tqdm",
    "torch",
    "numba",
    "ultralytics",   # YOLO (v8/v11)
    "ensemble-boxes"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"